--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,18 @@
 [package]
-name = "termdaw"
+name = "lv2-host-minimal"
 version = "0.1.0"
 authors = ["Cody Bloemhard <cblmhrd@live.nl>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+name = "lv2hm"
+path = "src/lib.rs"
+
+[[bin]]
+name = "testbin"
+path = "src/bin.rs"
 
 [dependencies]
 lilv-sys = "0.2.1"
