--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ name = "lv2-host-minimal"
 version = "0.1.0"
 authors = ["Cody Bloemhard <cblmhrd@live.nl>"]
 edition = "2018"
+description = "A very minimal lv2 host."
+license = "GPL-3.0-only"
+readme = "README.md"
+repository = "https://github.com/ocdy1001/lv2-host-minimal"
+keywords = ["lv2","host","plugin"]
+categories = ["multimedia::audio"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
